--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <title>DOM Form</title>
     <style>
       form {
         background: rgb(247, 227, 227);
